--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 #These individuals contributed to this project
 
 Ehizele Cara <caraehizele0607@gmail.com>
-Paschal Chinonso <
+Paschal Chinonso <Paschal4jesus@gmail.com>
